<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱投资</string>
    <string name="project_name">项目名称</string>
    <string name="project_detail">项目详情</string>
    <string name="project_date">还款日期</string>
    <string name="project_min">起投金额</string>
    <string name="project_gruantor">融租机构</string>
    <string name="project_more">更多</string>
    <string name="project_detail_clock">开放投资倒计时</string>
    <string name="project_date_format">2015-1-1</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="project">产品</string>
    <string name="idanbao_button">爱担保</string>
    <string name="irongzu_button">爱融租</string>
    <string name="project_guarantor">担保机构：云南应荣担保有限公司</string>
    <string name="project_profit">年化收益</string>
    <string name="project_amount">融资金额</string>
    <string name="project_detail_amount">融资金额(元)</string>
    <string name="project_invest_amount">可投金额(元)</string>
    <string name="project_invest_tamount">已投金额(元)</string>
    <string name="project_persons">投资人数(人)</string>
    <string name="project_time">融资期限</string>
    <string name="project_gruantee">融资担保</string>
    <string name="project_invest">立即投资</string>
    <string name="project_look">查看详情</string>
    <string name="project_limit_unit">个月</string>
    <string name="project_amount_unit">万</string>
    <string name="project_tab_jixi">当日计息</string>
    <string name="project_tab_zhuanrang">灵活转让</string>
    <string name="project_tab_benxi">本息保障</string>
    <string name="desc_tab">标签</string>
    <string name="project_percentage">%</string>
    <string name="project_description">项目描述</string>
    <string name="project_invest_record">投资记录</string>
    <string name="invest_user">用户</string>
    <string name="invest_amount">投资金额</string>
    <string name="invest_time">投资时间</string>
    <string name="record_tv">交易记录</string>
    <string name="user_invest">输入投资金额</string>
    <string name="user_webinvest">投资确认</string>
    <string name="user_register">注册</string>
    <string name="user_login">登陆</string>
    <string name="password_hint">6-16位英文字母、数字或符号</string>
    <string name="income_tv">我的收益</string>
    <string name="use_remain">可用余额(元)</string>
    <string name="total_money">总资产(元)</string>
    <string name="property_title">资产统计</string>
    <string name="more_hand">手势密码</string>
    <string name="more_email">站内信</string>
    <string name="more_us">关于我们</string>
    <string name="more_help">帮助中心</string>
    <string name="how_register">\u3000\u3000点击底部导航栏"更多"，点击登录或注册按钮进入登录界面，点击右上角"注册"，输入手机号完成注册及手机认证。实名认证暂需登录官网(www.itouzi.com)完成。</string>
    <string name="how_invest">\u3000\u3000在"主页"或"项目"页，点击可投项目"立即投资",账户暂需提前在官网充值。</string>
    <string name="how_free">\u3000\u3000爱投资实行"投资用户全免费"政策，注册认证、充值、投资、投资本息提现、账户管理统统零费用。</string>
    <string name="how_password">\u3000\u3000点击手势密码右下方"忘记手势密码"退出后，用认证手机号或用户名重新登录。</string>
    <string name="more_phone">客服电话</string>
    <string name="more_iphone">400-600-4300</string>
    <string name="more_score">应用评分</string>
    <string name="more_command">意见反馈</string>
    <string name="more_command_contact">联系方式</string>
    <string name="more_share">转给朋友</string>
    <string name="gestrue_title">手势密码</string>
    <string name="gestrue_setlock">设置手势密码</string>
    <string name="lock_reset">修改手势密码</string>
    <string name="project_time_hint">开放投资时间</string>
    <string name="up_to_refresh">上拉刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松手更新</string>
    <string name="get_more">查看更多</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="image_desc">指示箭头</string>
    <string name="cancel">取消</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_error">"手势密码不对"</string>
    <string name="about_content">"\u3000\u3000爱投资（官网itouzi.com）是国内首创P2C互联网金融交易模式的平台,于2013年3月31日上线。致力于为个人和企业搭建一个高效、直接的融资桥梁，构筑更轻松自由的投融资环境， 寻找个人与企业之间安全与效率的平衡点，推动解决利率市场化进程中投资渠道窄和实体企业融资难的问题，实现合作共赢。"</string>

    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>

</resources>