<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/i_white">
        <TextView
            android:id= "@+id/record_user"
            android:layout_width= "wrap_content"
            android:layout_height ="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding= "7.5dp"
            android:layout_marginLeft="10dp"
            android:text= "@string/invest_user"
            android:textColor= "@color/i_gray_text"
            android:textSize= "15sp" />
         <TextView
            android:id="@+id/record_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="7.5dp"
            android:text="@string/invest_amount"
            android:textColor="@color/i_gray_text"
            android:textSize="15sp" />
         <TextView
            android:id= "@+id/record_time"
            android:layout_width= "wrap_content"
            android:layout_height ="wrap_content"
            android:layout_alignParentRight="true"
            android:padding= "7.5dp"
            android:layout_marginRight="10dp"
            android:text= "@string/invest_time"
            android:textColor= "@color/i_gray_text"
            android:textSize= "15sp" />
</RelativeLayout>
