<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/i_white"
    android:orientation="vertical" >
        <!-- 推荐产品 :标题 -->
        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/i_gray_back"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" >
            <ImageView
                android:id="@+id/iv_newuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/newuser"
                android:visibility="visible" />
            <ImageView
                android:id="@+id/iv_reco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/recommend"
                android:visibility="invisible" />
            <TextView
                android:id="@+id/home_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/iv_reco"
                android:textColor="@color/i_black"
                android:textSize="17sp"
                android:text="@string/project_name" />
            <TextView
                android:id="@+id/tv_guarantor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/home_project_name"
                android:layout_toLeftOf="@id/iv_newuser"
                android:layout_marginTop="5dp"
                android:textColor="#666666"
                android:textSize="13sp"
                android:text="@string/project_guarantor" />
        </RelativeLayout>
        <!-- 推荐产品：投资信息 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="50dp"
                android:text="@string/project_profit"
                android:textColor="@color/i_gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/profit"
                android:layout_marginRight="5dp"
                android:text="14.5"
                android:textColor="#f06160"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tv_iprofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_profit"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/tv_profit"
                android:text="%"
                android:textColor="#f06160"
                android:textSize="13sp" />
		 <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/project_time"
                android:textColor="@color/i_gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_iprofit"
                android:layout_alignLeft="@id/time"
                android:text="12"
                android:textColor="@color/i_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_itime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_iprofit"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/tv_time"
                android:text="月"
                android:textColor="@color/i_gray"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
               	android:layout_alignParentRight="true"
                android:text="@string/project_amount"
                android:textColor="#666666"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_iamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_iprofit"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:text="万"
                android:textColor="#666666"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_iprofit"
                android:layout_toLeftOf="@id/tv_iamount"
                android:text="1000"
                android:textColor="@color/i_black"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/rl_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_profit"
                android:layout_centerHorizontal="true" >

                <ProgressBar
                    android:id="@+id/pb_home"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="280dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/progress_go" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/pb_home"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/pb_home"
                    android:text="80%"
                    android:textColor="@color/i_red"
                    android:textSize="13sp" />
            </RelativeLayout>
			<Button
			    android:id= "@+id/btn_invest"
			    android:layout_width="300dp"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/rl_progressbar"
			    android:layout_marginTop="20dp"
			    android:layout_centerHorizontal="true"
			    android:background="@drawable/button_red"
			    android:textColor="@color/i_white"
			    android:textSize="20sp"
			    android:text="@string/project_look"/>
        </RelativeLayout>
</LinearLayout>